; ModuleID = '/home/carl/AnghaBench/sway/sway/commands/extr_bind.c_binding_add_translated.c'
source_filename = "/home/carl/AnghaBench/sway/sway/commands/extr_bind.c_binding_add_translated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_binding = type { i32, i32 }

@SWAY_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [54 x i8] c"Overwriting binding for device '%s' to `%s` from `%s`\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @binding_add_translated(%struct.sway_binding* %0, i32* %1) #0 {
  %3 = alloca %struct.sway_binding*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.sway_binding*, align 8
  store %struct.sway_binding* %0, %struct.sway_binding** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.sway_binding*, %struct.sway_binding** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call %struct.sway_binding* @binding_upsert(%struct.sway_binding* %6, i32* %7)
  store %struct.sway_binding* %8, %struct.sway_binding** %5, align 8
  %9 = load %struct.sway_binding*, %struct.sway_binding** %5, align 8
  %10 = icmp ne %struct.sway_binding* %9, null
  br i1 %10, label %11, label %25

11:                                               ; preds = %2
  %12 = load i32, i32* @SWAY_INFO, align 4
  %13 = load %struct.sway_binding*, %struct.sway_binding** %3, align 8
  %14 = getelementptr inbounds %struct.sway_binding, %struct.sway_binding* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.sway_binding*, %struct.sway_binding** %3, align 8
  %17 = getelementptr inbounds %struct.sway_binding, %struct.sway_binding* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.sway_binding*, %struct.sway_binding** %5, align 8
  %20 = getelementptr inbounds %struct.sway_binding, %struct.sway_binding* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @sway_log(i32 %12, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %18, i32 %21)
  %23 = load %struct.sway_binding*, %struct.sway_binding** %5, align 8
  %24 = call i32 @free_sway_binding(%struct.sway_binding* %23)
  br label %25

25:                                               ; preds = %11, %2
  ret void
}

declare dso_local %struct.sway_binding* @binding_upsert(%struct.sway_binding*, i32*) #1

declare dso_local i32 @sway_log(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @free_sway_binding(%struct.sway_binding*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
